# aoc

./: flake.nix  pyproject.toml  requirements.txt  setup.py
2017/: d1.py  d10.py  d14.py  d15.py  d18.py  d19.py  d2.py  d22.py  d22_2.py  d24.py  d3.py  d9.py
2018/: d1.py  d13.py  d13_2.py  d16_2.py  d17.py  d19.py  d20_3.py  d21.py  d23.py  d24.py  d25.py  d25_2.py  d4.py  out.py  util.coco  util.py
2019/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d18alt.py  d19.py  d2.py  d20.py  d21.py  d23.py  d24.py  d25.py  d3.py  d4.py  d5.py  d6.py  d7.py  d7async.py  d8.py  d9.py  intcode.py
2020/: d1.py
aoc/: __init__.py  test.py  util.py
aoc/2017/: d11.py  d12.py  d13.py  d16.py  d17.py  d20.py  d21.py  d23.py  d25.py  d4.py  d5.py  d6.py  d7.py  d8.py
aoc/2018/: d10.py  d11.py  d11_2.py  d12.py  d12.txt  d13_3.py  d14.py  d15_2.py  d15_unfinished.py  d16.py  d18.py  d2.py  d20.py  d20_2.py  d22.py  d22_2.py  d22_4.py  d23_2.py  d23_z.py  d24_2.py  d24_3.py  d3.py  d5.py  d6.py  d7.py  d7_2.py  d8.py  d8_2.py  d9.py
aoc/2019/: d1.py  d10.py  d10alt.py  d11.py  d12.py  d13.py  d13alt.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d21.py  d22.py  d22alt.py  d23.py  d24.py  d25.py  d3.py  d4.py  d5.py  d6.py  d6_alt.py  d7.py  d7async.py  d8.py  d9.py  intcode.py  util.py
aoc/2020/: d1.py  d10.py  d10alt.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py  d3.py  d4.py  d5.py  d6.py  d7.py  d7alt.py  d8.py  d9.py
aoc/2021/: d1.py  (+27 more)
(+31 files in other folders)
