[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Brian Parma <execrable@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
advent-of-code-data = "^0.8.5"
numpy = "^1.19.4"
trio = "^0.17.0"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
