[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Brian Parma <execrable@gmail.com>"]

[virtualenvs]
prefer-active-python=true


[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.3.2"
numpy = "^1.22.0"
trio = "^0.22.0"
networkx = "^2.5"
setuptools = "^66.0.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
pylama = "^8.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
